[gd_scene load_steps=19 format=3 uid="uid://cmitu4wcwpnrj"]

[ext_resource type="Texture2D" uid="uid://vyr0ks75oxum" path="res://graphics/characters/drone.png" id="1_gs6nb"]
[ext_resource type="Script" uid="uid://bq4oc4hanm8my" path="res://scenes/entities/drone.gd" id="1_n87ok"]
[ext_resource type="Shader" uid="uid://dyu8dnmfgbhm4" path="res://scenes/shaders/drone.tres" id="2_6vf5s"]
[ext_resource type="Texture2D" uid="uid://bav7n447bnsa5" path="res://graphics/fire/explosion.png" id="3_xcp44"]
[ext_resource type="Texture2D" uid="uid://dijla4pisrrw8" path="res://graphics/lights/main.png" id="4_0tq5o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_in55t"]
shader = ExtResource("2_6vf5s")
shader_parameter/Color = Color(1, 1, 1, 1)
shader_parameter/Progress = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_n87ok"]
atlas = ExtResource("1_gs6nb")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcp44"]
atlas = ExtResource("1_gs6nb")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tq5o"]
atlas = ExtResource("1_gs6nb")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vf5s"]
atlas = ExtResource("1_gs6nb")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_in55t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n87ok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcp44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tq5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vf5s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lvif6"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gs6nb"]
radius = 131.034

[sub_resource type="Animation" id="Animation_6vf5s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.69]
}

[sub_resource type="Animation" id="Animation_0tq5o"]
resource_name = "explode"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"chain_reaction"
}]
}

[sub_resource type="Animation" id="Animation_in55t"]
resource_name = "red light"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.3, 1.2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_in55t"]
_data = {
&"RESET": SubResource("Animation_6vf5s"),
&"explode": SubResource("Animation_0tq5o"),
&"red light": SubResource("Animation_in55t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xcp44"]
radius = 12.0

[node name="Drone" type="CharacterBody2D" groups=["Drones"]]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_n87ok")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_in55t")
sprite_frames = SubResource("SpriteFrames_in55t")
autoplay = "default"
frame_progress = 0.661622

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_lvif6")

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_gs6nb")

[node name="ExplosionSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_xcp44")
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_in55t")
}

[node name="CollisionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
shape = SubResource("CircleShape2D_xcp44")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-2, 2)
color = Color(1, 0.054902, 0.00392157, 1)
energy = 0.69
texture = ExtResource("4_0tq5o")
texture_scale = 0.1

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
